# Gold_Investment_Advisor

./: .env.example  Gold Investment AI Agent PRD.markdown  README.md
gold_investment_agent/: .env.example  .gitignore  README.md  pyproject.toml  test_openrouter_connection.py
gold_investment_agent/src/: coordinator.py  main.py  simulation.py
gold_investment_agent/src/agents/: currency_movements.py  economic_indicators.py  geopolitical_events.py  investor_sentiment.py  supply_demand.py  technical_factors.py
gold_investment_agent/src/tools/: api_tools.py  data_tools.py  env_loader.py
gold_investment_agent/web/: index.html
