[tool.poetry]
name = "gold-investment-agent"
version = "0.1.0"
description = "AI agent system for gold investment analysis."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.2"
numpy = "^1.26.4"
requests = "^2.31.0"
langgraph = "*"
langchain = "*"
scikit-learn = "^1.4.2"
ta-lib = "^0.4.28"
transformers = "^4.41.1"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 